build/usd-sys/usd-c/include.in/pxr/usd/usd/usd_prim_flags.h

typedef struct pxrInternal_v0_21__pxrReserved____UsdPrim_t_s pxrInternal_v0_21__pxrReserved____UsdPrim_t;
typedef pxrInternal_v0_21__pxrReserved____UsdPrim_t pxr_UsdPrim_t;
typedef unsigned int pxr_Usd_PrimFlags;
typedef struct pxrInternal_v0_21__pxrReserved____Usd_Term_t_s {
    pxr_Usd_PrimFlags flag;
    _Bool negated;
} USD_CPPMM_ALIGN(4) pxrInternal_v0_21__pxrReserved____Usd_Term_t;
typedef pxrInternal_v0_21__pxrReserved____Usd_Term_t pxr_Usd_Term_t;
typedef struct pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsPredicate%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsPredicate%) pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_t;
typedef pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_t pxr_Usd_PrimFlagsPredicate_t;
/** Conjunction of prim flag predicate terms.

Usually clients will implicitly create conjunctions by &&-ing together flag
predicate terms.  For example:
\code
// Get all loaded model children.
prim.GetFilteredChildren(UsdPrimIsModel && UsdPrimIsLoaded)
\endcode

See primFlags.h for more details. */
typedef struct pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsConjunction%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsConjunction%) pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_t;
typedef pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_t pxr_Usd_PrimFlagsConjunction_t;
/** Disjunction of prim flag predicate terms.

Usually clients will implicitly create disjunctions by ||-ing together flag
predicate terms.  For example:
\code
// Get all deactivated or undefined children.
prim.GetFilteredChildren(!UsdPrimIsActive || !UsdPrimIsDefined)
\endcode

See primFlags.h for more details. */
typedef struct pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsDisjunction%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsDisjunction%) pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_t;
typedef pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_t pxr_Usd_PrimFlagsDisjunction_t;
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_copy(
    pxr_Usd_PrimFlagsConjunction_t * this_
    , pxr_Usd_PrimFlagsConjunction_t const * rhs);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_dtor(
    pxr_Usd_PrimFlagsConjunction_t * this_);
/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_sizeof();
/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_alignof();
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_Tautology(
    pxr_Usd_PrimFlagsPredicate_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_Contradiction(
    pxr_Usd_PrimFlagsPredicate_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_TraverseInstanceProxies(
    pxr_Usd_PrimFlagsDisjunction_t * this_
    , pxr_Usd_PrimFlagsPredicate_t * * return_
    , _Bool traverse);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_IncludeInstanceProxiesInTraversal(
    pxr_Usd_PrimFlagsDisjunction_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_func(
    pxr_Usd_PrimFlagsDisjunction_t const * this_
    , _Bool * return_
    , pxr_UsdPrim_t const * prim);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_ctor(
    pxr_Usd_PrimFlagsDisjunction_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_ctor_1(
    pxr_Usd_PrimFlagsDisjunction_t * this_
    , pxr_Usd_Term_t term);
/** Add an additional term to this disjunction. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_op_bit_or_assign(
    pxr_Usd_PrimFlagsDisjunction_t * this_
    , pxr_Usd_PrimFlagsDisjunction_t * * return_
    , pxr_Usd_Term_t term);
/** Negate this disjunction, producing a disjunction by De Morgan's law.
For instance:

\code
!(UsdPrimIsLoaded || UsdPrimIsModel)
\endcode

Will negate the disjunction in parens to produce a conjunction
equivalent to:

\code
(!UsdPrimIsLoaded && !UsdPrimIsModel)
\endcode

Every expression may be formulated as either a disjunction or a
conjuction, but allowing both affords increased expressiveness. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_op_neg(
    pxr_Usd_PrimFlagsDisjunction_t const * this_
    , pxr_Usd_PrimFlagsConjunction_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_copy(
    pxr_Usd_PrimFlagsDisjunction_t * this_
    , pxr_Usd_PrimFlagsDisjunction_t const * rhs);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_dtor(
    pxr_Usd_PrimFlagsDisjunction_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___op_neg(
    pxr_Usd_Term_t * return_
    , pxr_Usd_PrimFlags flag);
/** Combine two terms to make a conjunction. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___op_and(
    pxr_Usd_PrimFlagsConjunction_t * return_
    , pxr_Usd_Term_t lhs
    , pxr_Usd_Term_t rhs);
/** Create a new conjunction with the term \p rhs added. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___op_and_1(
    pxr_Usd_PrimFlagsConjunction_t * return_
    , pxr_Usd_PrimFlagsConjunction_t const * conjunction
    , pxr_Usd_Term_t rhs);
/** Create a new conjunction with the term \p lhs added. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___op_and_2(
    pxr_Usd_PrimFlagsConjunction_t * return_
    , pxr_Usd_Term_t lhs
    , pxr_Usd_PrimFlagsConjunction_t const * conjunction);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___op_and_3(
    pxr_Usd_PrimFlagsConjunction_t * return_
    , pxr_Usd_PrimFlags lhs
    , pxr_Usd_PrimFlags rhs);
/** Combine two terms to make a disjunction. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___op_or(
    pxr_Usd_PrimFlagsDisjunction_t * return_
    , pxr_Usd_Term_t lhs
    , pxr_Usd_Term_t rhs);
/** Create a new disjunction with the term \p rhs added. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___op_or_1(
    pxr_Usd_PrimFlagsDisjunction_t * return_
    , pxr_Usd_PrimFlagsDisjunction_t const * disjunction
    , pxr_Usd_Term_t rhs);
/** Create a new disjunction with the term \p lhs added. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___op_or_2(
    pxr_Usd_PrimFlagsDisjunction_t * return_
    , pxr_Usd_Term_t lhs
    , pxr_Usd_PrimFlagsDisjunction_t const * disjunction);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___op_or_3(
    pxr_Usd_PrimFlagsDisjunction_t * return_
    , pxr_Usd_PrimFlags lhs
    , pxr_Usd_PrimFlags rhs);
/** This function is used to allow the prim traversal functions listed under
\ref Usd_PrimFlags "Prim predicate flags" to traverse beneath instance
prims and return descendants that pass the specified \p predicate
as instance proxy prims.  For example:

\code
// Return all children of the specified prim.  
// If prim is an instance, return all children as instance proxy prims.
prim.GetFilteredChildren(
    UsdTraverseInstanceProxies(UsdPrimAllPrimsPredicate))

// Return children of the specified prim that pass the default predicate.
// If prim is an instance, return the children that pass this predicate
// as instance proxy prims.
prim.GetFilteredChildren(UsdTraverseInstanceProxies());

// Return all model or group children of the specified prim.
// If prim is an instance, return the children that pass this predicate 
// as instance proxy prims.
prim.GetFilteredChildren(UsdTraverseInstanceProxies(UsdPrimIsModel || UsdPrimIsGroup));
\endcode

Users may also call Usd_PrimFlagsPredicate::TraverseInstanceProxies to
enable traversal beneath instance prims.  This function is equivalent to:
\code
predicate.TraverseInstanceProxies(true);
\endcode

However, this function may be more convenient, especially when calling
a prim traversal function with a default-constructed tautology predicate. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___UsdTraverseInstanceProxies(
    pxr_Usd_PrimFlagsPredicate_t * return_
    , pxr_Usd_PrimFlagsPredicate_t predicate);
/** \overload
Convenience method equivalent to calling UsdTraverseInstanceProxies
with the UsdPrimDefaultPredicate that is used by default for prim 
traversals. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___UsdTraverseInstanceProxies_1(
    pxr_Usd_PrimFlagsPredicate_t * return_);