build/usd-sys/src/pxr/usd/usd/usd_prim_flags.rs


pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_copy(this_: *mut pxr_Usd_PrimFlagsConjunction_t, rhs: *const pxr_Usd_PrimFlagsConjunction_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_dtor(this_: *mut pxr_Usd_PrimFlagsConjunction_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_Tautology(return_: *mut pxr_Usd_PrimFlagsPredicate_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_Contradiction(return_: *mut pxr_Usd_PrimFlagsPredicate_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_TraverseInstanceProxies(this_: *mut pxr_Usd_PrimFlagsDisjunction_t, return_: *mut *mut pxr_Usd_PrimFlagsPredicate_t, traverse: bool) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_IncludeInstanceProxiesInTraversal(this_: *const pxr_Usd_PrimFlagsDisjunction_t, return_: *mut bool) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_func(this_: *const pxr_Usd_PrimFlagsDisjunction_t, return_: *mut bool, prim: *const pxr_UsdPrim_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_ctor(this_: *mut pxr_Usd_PrimFlagsDisjunction_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_ctor_1(this_: *mut pxr_Usd_PrimFlagsDisjunction_t, term: pxr_Usd_Term_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_op_bit_or_assign(this_: *mut pxr_Usd_PrimFlagsDisjunction_t, return_: *mut *mut pxr_Usd_PrimFlagsDisjunction_t, term: pxr_Usd_Term_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_op_neg(this_: *const pxr_Usd_PrimFlagsDisjunction_t, return_: *mut pxr_Usd_PrimFlagsConjunction_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_copy(this_: *mut pxr_Usd_PrimFlagsDisjunction_t, rhs: *const pxr_Usd_PrimFlagsDisjunction_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_dtor(this_: *mut pxr_Usd_PrimFlagsDisjunction_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___op_neg(return_: *mut pxr_Usd_Term_t, flag: pxr_Usd_PrimFlags) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___op_and(return_: *mut pxr_Usd_PrimFlagsConjunction_t, lhs: pxr_Usd_Term_t, rhs: pxr_Usd_Term_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___op_and_1(return_: *mut pxr_Usd_PrimFlagsConjunction_t, conjunction: *const pxr_Usd_PrimFlagsConjunction_t, rhs: pxr_Usd_Term_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___op_and_2(return_: *mut pxr_Usd_PrimFlagsConjunction_t, lhs: pxr_Usd_Term_t, conjunction: *const pxr_Usd_PrimFlagsConjunction_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___op_and_3(return_: *mut pxr_Usd_PrimFlagsConjunction_t, lhs: pxr_Usd_PrimFlags, rhs: pxr_Usd_PrimFlags) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___op_or(return_: *mut pxr_Usd_PrimFlagsDisjunction_t, lhs: pxr_Usd_Term_t, rhs: pxr_Usd_Term_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___op_or_1(return_: *mut pxr_Usd_PrimFlagsDisjunction_t, disjunction: *const pxr_Usd_PrimFlagsDisjunction_t, rhs: pxr_Usd_Term_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___op_or_2(return_: *mut pxr_Usd_PrimFlagsDisjunction_t, lhs: pxr_Usd_Term_t, disjunction: *const pxr_Usd_PrimFlagsDisjunction_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___op_or_3(return_: *mut pxr_Usd_PrimFlagsDisjunction_t, lhs: pxr_Usd_PrimFlags, rhs: pxr_Usd_PrimFlags) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___UsdTraverseInstanceProxies(return_: *mut pxr_Usd_PrimFlagsPredicate_t, predicate: pxr_Usd_PrimFlagsPredicate_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___UsdTraverseInstanceProxies_1(return_: *mut pxr_Usd_PrimFlagsPredicate_t) -> Exception;


} // extern "C"
